# labitbu

./: Cargo.toml  README.md  build.sh  index.html  labitbu-runner.js  labitbu-traits.json  lasnoozesnooze.json  old-index.html
docs/: CNAME  index.html  labitbu-generator.js  labitbu-runner.js  labitbu-traits-sleepy.json  labitbu.json  labubu-generator.js  webp-extractor.js
docs/pkg/: labitbu.d.ts  labitbu.js  labitbu_bg.wasm  labitbu_bg.wasm.d.ts  package.json
src/: lib.rs
